--- a/index.html
+++ b/index.html
@@ -599,12 +599,29 @@
 					<a href="./images/UC-9440e009-9f2d-4a1c-90be-867afbcf3597.jpg">
 						<div class="portfolio-item">
 							<div class="details">
-								<h4 class="title">Document Storage System</h4>
-								<span class="term">Creative</span>
+								<h4 class="title">Web Development</h4>
+								<span class="term"></span>
 							</div>
 							<span class="plus-icon">+</span>
 							<div class="thumb">
 								<img src="./images/UC-9440e009-9f2d-4a1c-90be-867afbcf3597.jpg" alt="Portfolio-title" />
+								<div class="mask"></div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<!-- portfolio item -->
+				<div class="col-md-4 col-sm-6 grid-item">
+					<a href="./images/cert-degree.jpg">
+						<div class="portfolio-item">
+							<div class="details">
+								<h4 class="title">Degree</h4>
+								<span class="term"></span>
+							</div>
+							<span class="plus-icon">+</span>
+							<div class="thumb">
+								<img src="./images/cert-degree.jpg" alt="Portfolio-title" />
 								<div class="mask"></div>
 							</div>
 						</div>
