--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<p style="text-align: justify;" class="mb-0">I am Ken, a Software Engineer with 3 years experience in system integrate, web application, 
 						works with Backend as well as Frontend and customization. Skilled in RestApi, Asp.net, JavaScript, Html, CSS, C#.
 						Possess a Bachelor’s Degress in Mechatronic Engineer from University Malaysia Pahang (UMP) with the knowledge of Data Science. 
-						Seeking to leverage acquired academic knowledge and work experience to effectively fill the Systems and Data Engineer position.</p>
+						Seeking to leverage acquired academic knowledge and work experience to effectively fill the Systems/Automation/Data Engineer position.</p>
 					<div class="row my-4">
 						<div class="col-md-6">
 							<p class="mb-2">Name: <span class="text-dark">Lin Kah Kiat</span></p>
