--- a/index.html
+++ b/index.html
@@ -629,6 +629,40 @@
 						</div>
 					</a>
 				</div>
+				
+				<!-- portfolio item -->
+				<div class="col-md-4 col-sm-6 grid-item">
+					<a href="./images/CitrexAward.png">
+						<div class="portfolio-item">
+							<div class="details">
+								<h4 class="title">Citrex-Silver</h4>
+								<span class="term"></span>
+							</div>
+							<span class="plus-icon">+</span>
+							<div class="thumb">
+								<img src="./images/CitrexAward.jpg" alt="Portfolio-title" />
+								<div class="mask"></div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<!-- portfolio item -->
+				<div class="col-md-4 col-sm-6 grid-item">
+					<a href="./images/Catia.png">
+						<div class="portfolio-item">
+							<div class="details">
+								<h4 class="title">Catia Workshop</h4>
+								<span class="term"></span>
+							</div>
+							<span class="plus-icon">+</span>
+							<div class="thumb">
+								<img src="./images/Catia.png" alt="Portfolio-title" />
+								<div class="mask"></div>
+							</div>
+						</div>
+					</a>
+				</div>
 
 			</div>
 			
