--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 							</div>
 							<span class="plus-icon">+</span>
 							<div class="thumb">
-								<img src="./images/CitrexAward.jpg" alt="Portfolio-title" />
+								<img src="./images/CitrexAward.png" alt="Portfolio-title" />
 								<div class="mask"></div>
 							</div>
 						</div>
