--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
 						<span>Oct 2021 - Now</span>
 					</div>
 					<div class="body">
-						<h4 class="mt-0">Full Stack Engineer</h4>
-						<h8 style="font-weight: bold; color: black;">OTS Retail Group</h8>
+						<h4 class="mt-0">System Engineer</h4>
+						<h8 style="font-weight: bold; color: black;">OTS Group</h8>
 						<ul style="text-align: justify;">
 							<li>Worked with the company to create REST API designs and develop API systems for their website.</li>
 							<li>Pooling data from 10 multi-store database for reporting and analysis.</li>
