--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</div>
 				<div class="col-md-9">
 					<h2 class="mt-4 mt-md-0 mb-4">Hello,</h2>
-					<p style="text-align: justify;" class="mb-0">I am Ken, a Software Engineer with 3 years experience in system integrate, web application, 
+					<p style="text-align: justify;" class="mb-0">I am Ken, a System Engineer with 3 years experience in system integrate, web application, 
 						works with Backend as well as Frontend and customization. Skilled in RestApi, Asp.net, JavaScript, Html, CSS, C#, Python.
 						Possess a Bachelor’s Degress in Mechatronic Engineer from University Malaysia Pahang (UMP) with the knowledge of Data Science. 
 						Seeking to leverage acquired academic knowledge and work experience to effectively fill the Systems / Automation / AOI / Integration Engineer position.</p>
@@ -88,7 +88,7 @@
 							<p class="mb-0">Email: <span class="text-dark">kahkiat_94@hotmail.com</span></p>
 						</div>
 					</div>
-					<a href="ResumeV1.6-Lin Kah Kiat.pdf" target="_blank"  class="btn btn-default mr-3"><i class="icon-cloud-download"></i>Download Resume</a>
+					<a href="ResumeV1.7-Lin Kah Kiat.pdf" target="_blank"  class="btn btn-default mr-3"><i class="icon-cloud-download"></i>Download Resume</a>
 					<a href="#contact" class="btn btn-alt mt-2 mt-md-0 mt-xs-2"><i class="icon-envelope"></i>Hire me</a>
 				</div>
 			</div>
@@ -337,7 +337,7 @@
 					</div>
 					<div class="body">
 						<h4 class="mt-0">System Engineer</h4>
-						<h8 style="font-weight: bold; color: black;">OTS Group</h8>
+						<h8 style="font-weight: bold; color: black;">ONETWOSIX ENTERPRISE</h8>
 						<ul style="text-align: justify;">
 							<li>Worked with the company to create REST API designs and develop API systems for their website.</li>
 							<li>Pooling data from 10 multi-store database for reporting and analysis.</li>
