--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</div>
 				<div class="col-md-9">
 					<h2 class="mt-4 mt-md-0 mb-4">Hello,</h2>
-					<p style="text-align: justify;" class="mb-0">I am Ken, a System Engineer with 3 years experience in system integrate, web application, 
+					<p style="text-align: justify;" class="mb-0">I am Ken, a System Engineer with 3 years experience in system integrate, i/o connection, robot teaching, web application, 
 						works with Backend as well as Frontend and customization. Skilled in RestApi, Asp.net, JavaScript, Html, CSS, C#, Python.
 						Possess a Bachelor’s Degress in Mechatronic Engineer from University Malaysia Pahang (UMP) with the knowledge of Data Science. 
 						Seeking to leverage acquired academic knowledge and work experience to effectively fill the Systems / Automation / AOI / Integration Engineer position.</p>
