--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<h2 class="mt-4 mt-md-0 mb-4">Hello,</h2>
 					<p style="text-align: justify;" class="mb-0">I am Ken, a System Engineer with 3 years experience in system integrate, i/o connection, robot teaching, web application, 
 						works with Backend as well as Frontend and customization. Skilled in RestApi, Asp.net, JavaScript, Html, CSS, C#, Python.
-						Possess a Bachelor’s Degress in Mechatronic Engineer from University Malaysia Pahang (UMP) with the knowledge of Data Science. 
+						Possess a Bachelor’s Degrees in Mechatronic Engineer from University Malaysia Pahang (UMP) and having the knowledge of Data Science as well. 
 						Seeking to leverage acquired academic knowledge and work experience to effectively fill the Systems / Automation / AOI / Integration Engineer position.</p>
 					<div class="row my-4">
 						<div class="col-md-6">
