--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 						<div class="portfolio-item">
 							<div class="details">
 								<h4 class="title">FYP - Optimization</h4>
-								<span class="term">Art, Branding</span>
+								<span class="term">Matlab, BPSO Algorithm, Optimization</span>
 							</div>
 							<span class="plus-icon">+</span>
 							<div class="thumb">
