--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 
 			</div>
 			
-			<!-- more button -->
+			<!-- more button 
 			<div class="load-more text-center mt-4">
 				<a href="javascript:" class="btn btn-default"><i class="fas fa-circle-notch"></i> Load more</a>
 				<!-- numbered pagination (hidden for infinite scroll) -->
@@ -567,6 +567,7 @@
 					<li class="list-inline-item"><a href="works-2.html">2</a></li>
 				</ul>
 			</div>
+			-->
 		</section>
 
 		<!-- section awards -->
