--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 			
 			<!-- more button -->
 			<div class="load-more text-center mt-4">
-				<a href="javascript:" class="btn btn-default"><i class="fas fa-circle-notch"></i> Load more</a>
+				<a href="javascript:" class="btn btn-default" disabled><i class="fas fa-circle-notch"></i> Load more</a>
 				<!-- numbered pagination (hidden for infinite scroll) -->
 				<ul class="portfolio-pagination list-inline d-none">
 					<li class="list-inline-item">1</li>
