--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<!-- section hero -->
 		<section class="hero background parallax shadow-dark d-flex align-items-center" id="home" data-image-src="./images/1.jpg">
 			<div class="cta mx-auto mt-2">
-				<h1 class="mt-0 mb-4">I’m Ken<span class="dot"></span></h1>
+				<h1 class="mt-0 mb-4">I’m KK<span class="dot"></span></h1>
 				<p class="mb-4">Welcome to my portfolio! In this collection you will find pieces of knowledge and experience that I have gain so far in my career.</p>
 				<a href="#works" class="btn btn-default btn-lg mr-3"><i class="icon-grid"></i>View Portfolio</a>
 				<div class="spacer d-md-none d-lg-none d-sm-none" data-height="10"></div>
