--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Ken Lin - My Portfolio</title>
+	<title>KK Lin - My Portfolio</title>
 	<meta name="description" content="Ken - My Portfolio">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="./images/3.jpg">
