--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
 					</div>
 					<div class="body">
 						<h4 class="mt-0">Senior Engineer</h4>
-						<h8 style="font-weight: bold; color: black;">Infineon (Kulim) Sdn Bhd</h8>
-						<h8 style="font-weight: bold; color: black;">Developer (CSC FI EMA INT AP) ~ 1 yrs (Sept 2024 - NOW)</h8>
+						<p style="font-weight: bold; color: black;">Infineon (Kulim) Sdn Bhd</p>
+						<p style="font-weight: bold; color: black;">Developer (CSC FI EMA INT AP) ~ 1 yrs (Sept 2024 - NOW)</p>
 						<ul style="text-align: justify;">
 							<li>Act as a Kulim representative for EAF related topic.</li>
 							<li>Joined INT AP team and be developer of EAF Kernel Development Team.</li>
@@ -347,7 +347,7 @@
 							<li>Provided guidance and support to EMA FE/BE members on using the components of EAF Kernel.</li>
 							<li>Enhanced the monitoring idle rule to support ASM tools (batch running tool), eliminating the need for manual monitoring during server move, increase the team efficiency.</li>
 						</ul>
-						<h8 style="font-weight: bold; color: black;">Equipment Integrator (CSC FI EMA FE KLM) ~ 1.5 yrs (Feb 2023 - Aug 2024)</h8>
+						<p style="font-weight: bold; color: black;">Equipment Integrator (CSC FI EMA FE KLM) ~ 1.5 yrs (Feb 2023 - Aug 2024)</p>
 						<ul style="text-align: justify;">
 							<li>Managed integration and upkeep of 100+ tools in the WET module, ensuring seamless operation and zero critical incidents.</li>
 							<li>Led team of 3 and delivered all 20+ WET tools with Equipment Automation Framework (EAF), meeting the WBG project's challenging timeline.</li>
@@ -367,7 +367,7 @@
 					</div>
 					<div class="body">
 						<h4 class="mt-0">Developer</h4>
-						<h8 style="font-weight: bold; color: black;">OTS Retail group</h8>
+						<p style="font-weight: bold; color: black;">OTS Retail group</p>
 						<ul style="text-align: justify;">
 							<li>Worked with the company to create REST API designs and develop API systems for their website.</li>
 							<li>Pooling data from 10 multi-store database for reporting and analysis.</li>
@@ -386,7 +386,7 @@
 					</div>
 					<div class="body">
 						<h4 class="mt-0">System Engineer</h4>
-						<h8 style="font-weight: bold; color: black;">CIMATION (M) SDN BHD (System Integrator)</h8>
+						<p style="font-weight: bold; color: black;">CIMATION (M) SDN BHD (System Integrator)</p>
 						<ul style="text-align: justify;">
 							<li>Designed and implemented a data integration platform that unified production data from PLCs, sensors, IoT devices and improving data visibility.</li>
 							<li>Developed a real-time monitoring Dashboard. (e.g. OEE Dashboard)</li>
@@ -404,7 +404,7 @@
 					</div>
 					<div class="body">
 						<h4 class="mt-0">INDUSTRIAL TRAINEE</h4>
-						<h8 style="font-weight: bold; color: black;">SONY EMCS MALAYSIA (R&D CENTER)</h8>
+						<p style="font-weight: bold; color: black;">SONY EMCS MALAYSIA (R&D CENTER)</p>
 						<ul style="text-align: justify;">
 							<li>Assist in performing testing and evaluation of new TV project.</li>
 							<li>Conduct analysis on TV Backlighting System and make improvement on new TV model.</li>
@@ -801,3 +801,4 @@
 
 </body>
 </html>
+
