--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</div>
 				<div class="col-md-9">
 					<h2 class="mt-4 mt-md-0 mb-4">Hello,</h2>
-					<p style="text-align: justify;" class="mb-0">I am KK, A System Engineer with a passion for integrating devices with systems and driving efficiency. 
+					<p style="text-align: justify;" class="mb-0">I'm KK, A System Engineer with a passion for integrating devices with systems and driving efficiency. 
 					With experience in the Semiconductor and IT industries, I've developed a strong background in manufacturing equipment integration, MES, and Factory Automation. 
 					Holding a degree in Mechatronic Engineering, I bring a unique blend of E&E, mechanical, and software skills to the table. 
 					Let's connect and explore how I can help drive innovation in your organization.</p>
@@ -88,7 +88,7 @@
 							<p class="mb-0">Email: <span class="text-dark">kahkiat_94@hotmail.com</span></p>
 						</div>
 					</div>
-					<a href="ResumeV3.0-Lin Kah Kiat.pdf" target="_blank"  class="btn btn-default mr-3"><i class="icon-cloud-download"></i>Download Resume</a>
+					<a href="Resume-Lin Kah Kiat.pdf" target="_blank"  class="btn btn-default mr-3"><i class="icon-cloud-download"></i>Download Resume</a>
 					<a href="#contact" class="btn btn-alt mt-2 mt-md-0 mt-xs-2"><i class="icon-envelope"></i>Hire me</a>
 				</div>
 			</div>
@@ -100,6 +100,15 @@
 			<div class="spacer" data-height="80"></div>
 
 			<div class="row">
+
+				<div class="col-md-3 col-sm-5">
+				  <!-- service item -->
+				  <div class="service-item text-center">
+				    <span style="font-size: xxx-large; font-weight: bold; color: #337ab7;">SECS</span>
+				    <h6 class="my-3">SECS</h6>
+				  </div>
+				  <div class="spacer" data-height="20"></div>
+				</div>
 
 				<div class="col-md-3 col-sm-5">
 					<!-- service item -->
@@ -801,6 +810,7 @@
 
 </body>
 </html>
+
 
 
 
