--- a/index.html
+++ b/index.html
@@ -248,6 +248,26 @@
 					<!-- service item -->
 					<div class="service-item text-center">
 						<i class="icon-simple" style="font-size: xxx-large;"></i>
+						<h6 class="my-3">SECS/GEM</h4>
+						<!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p> -->
+					</div>
+					<div class="spacer" data-height="20"></div>
+				</div>
+
+				<div class="col-md-3 col-sm-5">
+					<!-- service item -->
+					<div class="service-item text-center">
+						<i class="icon-simple" style="font-size: xxx-large;"></i>
+						<h6 class="my-3">SCRUM Practice</h4>
+						<!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p> -->
+					</div>
+					<div class="spacer" data-height="20"></div>
+				</div>
+				
+				<div class="col-md-3 col-sm-5">
+					<!-- service item -->
+					<div class="service-item text-center">
+						<i class="icon-simple" style="font-size: xxx-large;"></i>
 						<h6 class="my-3">PLC Programming</h4>
 						<!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p> -->
 					</div>
@@ -810,6 +830,7 @@
 
 </body>
 </html>
+
 
 
 
