--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
 				<div class="col-md-3 col-sm-5">
 					<!-- service item -->
 					<div class="service-item text-center">
+						<i class="devicon-git-plain-wordmark icon-simple" style="font-size: xxx-large;"></i>
+						<h6 class="my-3">Html & CSS</h4>
+						<!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p> -->
+					</div>
+					<div class="spacer" data-height="20"></div>
+				</div>
+				
+				<div class="col-md-3 col-sm-5">
+					<!-- service item -->
+					<div class="service-item text-center">
 						<i class="devicon-html5-plain-wordmark icon-simple" style="font-size: xxx-large;"></i>
 						<h6 class="my-3">Html & CSS</h4>
 						<!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p> -->
@@ -821,6 +831,7 @@
 
 </body>
 </html>
+
 
 
 
