--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<!-- service item -->
 					<div class="service-item text-center">
 						<i class="devicon-git-plain-wordmark icon-simple" style="font-size: xxx-large;"></i>
-						<h6 class="my-3">Html & CSS</h4>
+						<h6 class="my-3">git</h4>
 						<!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetuer elit.</p> -->
 					</div>
 					<div class="spacer" data-height="20"></div>
@@ -831,6 +831,7 @@
 
 </body>
 </html>
+
 
 
 
